--- a/sass/wyrm_addons/rst/_rst.sass
+++ b/sass/wyrm_addons/rst/_rst.sass
@@ -13,6 +13,7 @@
     font-size: 90%
     cursor: pointer
     color: $green
+    z-index: $z-index-tray 
     +clearfix
     .icon
       color: $section-background-color 
